--- a/css/styles.css
+++ b/css/styles.css
@@ -32,65 +32,58 @@ body {
 }
 
 ul {
+  margin: 0;
+  padding: 0;
   list-style-type: none;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+}
+
+p {
+  margin: 0;
+}
+
 a {
+  display: block;
   color: inherit;
   text-decoration: none;
 }
 
-.hero-header {
-  font-size: 56px;
-  font-weight: var(--large-font-weight);
-  line-height: 1.071;
-  text-align: center;
+.container {
+  display: flex;
+  flex-direction: column;
+  max-width: 1440px;
 }
 
-.hero-button {
-  display: inline-flex;
-  color: var(--primary-background-color);
-  background-color: var(--primary-control-color);
-  border-color: var(--primary-control-color);
-  font-family: inherit;
-  font-size: inherit;
-  font-weight: var(--medium-font-weight);
-  line-height: inherit;
-  letter-spacing: inherit;
-  text-align: center;
+.page-header {
+  border-bottom: 1px solid var(--specific-border-color);
 }
 
-.hero-button:hover,
-.hero-button:focus,
-.hero-button:active {
-  background-color: var(--active-control-color);
-  border-color: var(--active-control-color);
-}
-
-.section-header {
-  font-size: 36px;
-  font-weight: var(--large-font-weight);
-  line-height: 1.111;
-  text-align: center;
-}
-
-.visually-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-
-  white-space: nowrap;
-  clip-path: inset(100%);
-  clip: rect(0 0 0 0);
-  overflow: hidden;
+.page-header .container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  padding: 24px 156px;
+  gap: 76px;
 }
 
 .nav-list, .contacts-list {
   display: flex;
-  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 40px;
+}
+
+.navigation {
+  flex-grow: 1;
 }
 
 .nav-list-item-link {
@@ -110,25 +103,115 @@ a {
   color: var(--active-control-color);
 }
 
+.section {
+  padding: 120px 156px;
+}
+
+.hero {
+  padding: 260px 156px;
+  align-items: center;
+}
+
+.hero-header {
+  font-size: 56px;
+  font-weight: var(--large-font-weight);
+  line-height: 1.071;
+  text-align: center;
+  max-width: 496px;
+  margin: 0 auto 48px auto;
+}
+
+.hero-button {
+  display: block;
+  color: var(--primary-background-color);
+  border-width: 0;
+  background-color: var(--primary-control-color);
+  border-color: var(--primary-control-color);
+  border-radius: 4px;
+  font-family: inherit;
+  font-size: inherit;
+  font-weight: var(--medium-font-weight);
+  line-height: inherit;
+  letter-spacing: inherit;
+  text-align: center;
+  padding: 16px 32px;
+  max-width: 169px;
+  margin: auto;
+}
+
+.hero-button:hover,
+.hero-button:focus,
+.hero-button:active {
+  background-color: var(--active-control-color);
+  border-color: var(--active-control-color);
+}
+
+.advantages {
+  padding-bottom: 0;
+}
+
+.section-header {
+  font-size: 36px;
+  font-weight: var(--large-font-weight);
+  line-height: 1.111;
+  text-align: center;
+  margin-bottom: 72px;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
 .team {
   background-color: var(--secondary-background-color);
 }
 
 .team-card {
   text-align: center;
+  border-radius: 0 0 4px 4px;
+  padding-bottom: 32px;
+  max-width: 264px;
+}
+
+.team-card .content-list-item-header {
+  padding-top: 32px;
+}
+
+.portfolio-content {
+  padding-top: 96px;
+}
+
+.controls-list {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+  padding: 0 0 72px 0;
 }
 
 .controls-list-item-button {
   display: inline-flex;
   color: var(--primary-control-color);
   background-color: var(--secondary-background-color);
+  border-width: 0;
   border-color: var(--specific-border-color);
+  border-radius: 4px;
   font-family: inherit;
   font-size: inherit;
   font-weight: var(--medium-font-weight);
   line-height: inherit;
   letter-spacing: var(--double-letter-spacing);
   text-align: center;
+  padding: 12px 24px;
 }
 
 .controls-list-item-button:hover,
@@ -139,6 +222,13 @@ a {
   border-color: var(--active-control-color);
 }
 
+.content-list {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 24px;
+}
+
 .content-list-item {
   background-color: var(--primary-background-color);
 }
@@ -147,10 +237,45 @@ a {
   font-size: 20px;
   font-weight: var(--medium-font-weight);
   line-height: 1.2;
+  margin-bottom: 8px;
+}
+
+.content-list-item-text {
+  max-width: 264px;
+}
+
+.portfolio-card {
+  border: 1px solid var(--specific-border-color);
+  max-width: 360px;
+}
+
+.portfolio-card .content-list-item-header {
+  padding-top: 32px;
+  padding-left: 16px;
+}
+
+.portfolio-card .content-list-item-text {
+  padding-bottom: 32px;
+  padding-left: 16px;
+}
+
+.hero,
+footer {
+  background-color: var(--primary-color);
+  color: var(--primary-background-color);
+}
+
+.page-footer {
+  padding: 100px 156px;
+}
+
+.footer-logo {
+  margin-bottom: 16px;
 }
 
 .header-logo,
 .footer-logo {
+  display: inline-flex;
   font-family: var(--secondary-font);
   color: var(--primary-control-color);
   font-size: 18px;
@@ -168,8 +293,6 @@ a {
   color: var(--primary-background-color);
 }
 
-.hero,
-footer {
-  background-color: var(--primary-color);
-  color: var(--primary-background-color);
+.footer-text {
+  max-width: 264px;
 }
