--- a/css/styles.css
+++ b/css/styles.css
@@ -253,18 +253,13 @@ img {
 }
 
 .portfolio-card {
-  border: 1px solid var(--specific-border-color);
   max-width: 360px;
 }
 
-.portfolio-card .content-list-item-header {
-  padding-top: 32px;
-  padding-left: 16px;
-}
-
-.portfolio-card .content-list-item-text {
-  padding-bottom: 32px;
-  padding-left: 16px;
+.portfolio-card-description {
+  border: 1px solid var(--specific-border-color);
+  border-top: 0;
+  padding: 32px 0 32px 16px;
 }
 
 .hero,
