--- a/css/styles.css
+++ b/css/styles.css
@@ -115,8 +115,8 @@ img {
 }
 
 .hero .container {
-  padding: 260px 156px;
-  align-items: center;
+  padding: 260px 0;
+  margin: 0 auto
 }
 
 .hero-header {
